# servicetsunami-agents

./: .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  docker-compose.prod.yml  docker-compose.yml  pytest.ini
.agent/workflows/: daily_sre_sync.md
.github/: copilot-instructions.md  mcp-servers.md
.github/workflows/: code-worker-deploy.yaml.disabled  deploy-all.yaml.disabled  dev-worker-deploy.yaml  docker-desktop-deploy.yaml  kubernetes-infrastructure.yaml.disabled  kubernetes-shared.yaml.disabled  local-deploy.yaml  luna-client-build.yaml  servicetsunami-api.yaml.disabled  servicetsunami-web.yaml.disabled  servicetsunami-worker.yaml.disabled  tests.yaml
.playwright-cli/: page-2026-03-13T10-48-28-692Z.yml  page-2026-03-13T10-48-44-715Z.yml  page-2026-03-13T10-49-50-276Z.yml
apps/adk-server/: Dockerfile  entrypoint.sh  requirements.txt  server.py
apps/agentprovision-cli/: Cargo.toml
apps/agentprovision-cli/src/: cli.rs
apps/agentprovision-cli/src/commands/: learn.rs  mod.rs  review.rs  watch.rs  workspace.rs
apps/api/: .env.example  Dockerfile  README.md  requirements.in  requirements.txt
apps/api/app/: main.py
apps/code-worker/: Dockerfile  README.md  cli_runtime.py  entrypoint.sh  hook_templates.py  session_manager.py  skill_eval_executor.py  tenant_home_quota.py  test_claude_codex_fallback.py  transcription.py  worker.py  workflows.py
apps/dev-worker/: Dockerfile  entrypoint.sh
apps/device-bridge/: README.md  main.py  requirements.txt
apps/embedding-service/: Cargo.toml  Dockerfile  build.rs
apps/embedding-service/src/: main.rs
apps/luna-client/: .env.example  Dockerfile  IOS_BUILD.md  README.md  package-lock.json  package.json  vite.config.js
apps/luna-client/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/luna-client/src-tauri/capabilities/: default.json  mobile.json
apps/luna-client/src-tauri/icons/AppIcon.appiconset/: Contents.json
apps/luna-client/src-tauri/src/: lib.rs
apps/luna-client/src-tauri/src/gesture/: camera.rs  cursor.rs  landmark.rs  landmark_apple_vision.rs  mod.rs  motion.rs  pose.rs  recognizer.rs  supervisor.rs  types.rs  wake.rs
apps/luna-client/src-tauri/src/gesture/tests/: mod.rs  motion_test.rs  pose_test.rs  wake_test.rs
apps/luna-client/src-tauri/swift/: HandLandmarker.swift
apps/mcp-server/: .env.example  Dockerfile  README.md  pyproject.toml
apps/mcp-server/src/: audit_breadcrumb.py  audit_metrics.py  config.py  mcp_app.py  mcp_auth.py  mcp_serve.py  server.py  tool_audit.py
apps/mcp-server/src/clients/: postgres_client.py
apps/mcp-server/src/mcp_tools/: __init__.py  ads.py  affect.py  analytics.py  aremko.py  calendar.py  competitor.py  connectors.py  data.py  devices.py  drive.py  dynamic_workflows.py  email.py  github.py  habits.py  jira.py  knowledge.py  learning.py  mcp_servers.py  memory_continuity.py  monitor.py  reports.py  sales.py  shell.py  skills.py  supermarket.py  unsupervised_learning.py  values.py  webhooks.py
apps/mcp-server/src/scrapers/: supermarket.py
apps/mcp-server/src/tools/: aremko_availability.py  postgres_tools.py
apps/mcp-server/src/utils/: fuzzy_search.py
apps/mcp-server/tests/: conftest.py  test_affect_tool.py  test_aremko_availability.py  test_aremko_reservations.py  test_drive_tool.py  test_fuzzy_search.py  test_github_resolver.py  test_habits_tool.py  test_learning.py  test_learning_http_shim.py  test_learning_prompt.py  test_mcp_auth.py  test_server.py  test_values_tool.py
apps/mcp-server/tests/snapshots/: synthesis_system_prompt.txt
apps/memory-core/: Cargo.toml  Dockerfile  README.md  build.rs
apps/memory-core/proto/: embedding.proto  memory.proto
apps/memory-core/src/: main.rs
apps/web/: Dockerfile  nginx.conf  package-lock.json  package.json
benchmarks/: 2026-04-27-luna-bench-FINAL-summary.md  2026-04-27-luna-bench-v2-baseline.md  2026-04-27-luna-bench-v5-greeting-fastpath-validation.md  2026-04-27-luna-bench-v6-raw.md  2026-04-27-luna-bench-v6-trim-validation.md  2026-04-27-luna-bench-v6.json  2026-04-27-luna-bench-v7-raw.md  2026-04-27-luna-bench-v7.json  2026-04-27-luna-bench-v8-raw.md  2026-04-27-luna-bench-v8.json  2026-04-27-luna-bench.json  2026-04-27-luna-bench.md
cloudflared/: config.yml
docs/: CONTEXT_MANAGEMENT_README.md  DATABRICKS_SYNC_README.md  LEVIS_ARCHITECTURE_OVERVIEW.md  LLM_INTEGRATION_README.md  MANUAL_BROWSER_TESTING_CHECKLIST.md  MCP_INTEGRATION.md  README.md  REPORTING_VISUALIZATION_SUMMARY.md  TOOL_FRAMEWORK_README.md  USAGE_REPORT_2026-03-11.md  adk-integration-complete.md  ux-improvements-clevel.md
docs/changelog/: 2026-04-12-to-2026-04-19.md  2026-04-19-to-2026-05-03.md
docs/marketing/: emotions-engine-business-definition.md  empathic-teammate-vision.md
docs/operator/: luna-learn-setup.md
docs/pitch/: wolfpoint-demo-pitch.md
docs/plans/: 2025-11-25-enterprise-ai-platform-design.md  2026-02-26-customer-support-sales-agents-design.md  2026-02-26-multi-team-agents-plan.md  2026-02-26-self-modifying-agents-design.md  2026-02-26-self-modifying-agents-plan.md  2026-02-28-healthpets-agents-implementation.md  2026-02-28-workflows-page-openclaw-cleanup.md  2026-03-02-memory-knowledge-base-redesign.md  2026-03-06-proactive-inbox-monitor.md  2026-03-07-prospecting-team-skills-implementation-plan.md  2026-03-07-prospecting-team-skills-system-design.md  2026-03-08-dev-worker-claude-code-design.md  2026-03-09-multimedia-support-plan.md  2026-03-10-marketing-intelligence-ads-platform-plan.md  (+126 more)
infra/: README.md
kubernetes/: README.md  cloudflared-deployment.yaml  ingress.yaml  k3d-config.yaml
scripts/: README.md  apply_pending_migrations.sh  backfill_embeddings.py  backfill_knowledge_from_sessions.py  backup_db.sh  check_aremko_availability.py  claudia_bridge.py  deploy_k8s_local.sh  import_community_skills.py  migrate_skills_layout.py  test_apply_pending_migrations_skip_down.sh  test_automations_api.py  verify_users_me.py
servicetsunami_supervisor/: tester.py
tests/: test_claudia_bridge.py  test_kubernetes_tools.py
tools/: kubernetes_tools.py
(+1213 files in other folders)
