[package]
name = "embedding-service"
version = "0.2.0"
edition = "2021"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic-health = "0.11"
tower = { version = "0.4", features = ["timeout"] }
fastembed = "4"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
pretty_assertions = "1.4"
