[project]
name = "agentprovision-mcp-server"
version = "0.1.0"
description = "MCP Integration Server for AgentProvision - connects data sources to PostgreSQL"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "pyarrow>=15.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "playwright==1.50.0",
    "sqlalchemy",
    "psycopg2-binary",
    "redis>=5.0.0",
    # JWT verification for the Phase 4 agent-token tier — see
    # src/agent_token_verify.py. Mirrors the python-jose dep in
    # apps/api/requirements.in so the verifier stays in sync with
    # the API-side minter (HS256, settings.SECRET_KEY).
    "python-jose>=3.3.0",
    # web_research tool module — DuckDuckGo HTML result parsing +
    # readability-style main-content extraction from URLs. bs4 is the
    # de-facto stdlib add-on and keeps the dep tree small (playwright is
    # already there for cases where JS rendering is required).
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["src", "build", "dist", ".git", ".tox", ".venv"]
