[package]
name = "luna"
version = "0.1.0"
description = "Luna — AI Assistant for desktop, mobile, and IoT"
authors = ["AgentProvision"]
license = "MIT"
repository = "https://github.com/nomad3/agentprovision-agents"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "luna_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
lazy_static = "1.4"
base64 = "0.22"

# Desktop-only (macOS, Windows, Linux) — cpal native audio capture
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
cpal = "0.15"

# Mobile (iOS + Android)
[target.'cfg(mobile)'.dependencies]
tauri-plugin-haptics = "2"
